--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A full-stack application for financial reporting using React and Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
