--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vue3-apexcharts": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
