--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - mongo-data:/data/db
 
   backend:
-    image: playground-web-backend
-    container_name: financial_dashboard_backend
+    image: financial_dashboard_backend_image
+    container_name: financial_dashboard_backend_container
     environment:
       - MONGODB_URI=yourmongodburi
     ports:
@@ -19,8 +19,8 @@ services:
       - mongo
 
   frontend:
-    image: playground-web-frontend
-    container_name: financial_dashboard_frontend
+    image: financial_dashboard_frontend_image
+    container_name: financial_dashboard_frontend_container
     ports:
       - 8080:80
     depends_on:
